--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 class="flex items-center gap-1 font-medium text-textDark hover:text-textGreen cursor-pointer duration-300 nav-link"
                                 href="index.html#contact">
                                 <li><span class="text-textGreen">04.</span>Contact</li>
-                            </a></ul><a href="assets/noor_resume.pdf" target="_blank"><button
+                            </a></ul><a href="https://sempanha.vercel.app/sem%20panha.pdf" target="_blank"><button
                                 class="px-4 py-2 rounded-md text-textGreen text-[13px] border border-textGreen hover:bg-hoverColor duration-300"
                                 style="opacity:1">Resume</button></a>
                     </div>
@@ -103,7 +103,7 @@
                                         href="index.html#contact">
                                         <li style="opacity: 1; transform: none;"><span
                                                 class="text-textGreen">04.</span>Contact</li>
-                                    </a></ul><a href="/assets/noor_resume.pdf" target="_blank"><button
+                                    </a></ul><a href="https://sempanha.vercel.app/sem%20panha.pdf" target="_blank"><button
                                         class="w-32 h-10 rounded-md text-textGreen text-[13px] border border-textGreen hover:bg-hoverColor duration-300"
                                         style="opacity: 1;">Resume</button>
                                 </a>
