--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                                         href="index.html#contact">
                                         <li style="opacity: 1; transform: none;"><span
                                                 class="text-textGreen">04.</span>Contact</li>
-                                    </a></ul><a href="https://sempanha.vercel.app/sem%20panha.pdf" target="_blank"><button
+                                    </a></ul><a href="https://sempanha.vercel.app/sem%20panha.pdf"
+                                    target="_blank"><button
                                         class="w-32 h-10 rounded-md text-textGreen text-[13px] border border-textGreen hover:bg-hoverColor duration-300"
                                         style="opacity: 1;">Resume</button>
                                 </a>
@@ -542,12 +543,17 @@
                             <div class="flex flex-col xl:flex-row-reverse gap-6">
                                 <div class="w-full xl:w-1/2 h-auto relative group">
                                     <div class="relative w-full h-full">
-                                        <video
+                                        <!-- <video
                                             class="w-full h-auto max-w-full border border-gray-200 rounded-lg dark:border-gray-700"
                                             controls>
                                             <source src="./assets/fishshooting.mp4" type="video/mp4">
                                             Your browser does not support the video tag.
-                                        </video>
+                                        </video> -->
+                                        <iframe width="auto" height="auto"
+                                            src="https://www.youtube.com/embed/f88rt3eHFO8?si=62LPQQ4prABJcoz2"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                     </div>
 
                                 </div>
@@ -895,6 +901,7 @@
                                 </p>
                             </a><span class="w-[2px] h-32 bg-textDark inline-flex"></span></div>
                     </div>
+
                 </div>
         </main>
     </div>
