--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Mirrored from myprofile.reactbd.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 06 Oct 2024 10:27:22 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
     <meta charSet="utf-8" />
@@ -10,13 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="logo.ico" />
 
-    <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"  rel="stylesheet" /> -->
     <link rel="stylesheet" href="_next/static/css/de0cdd4b6715dd7c.css" data-n-g="" /><noscript
         data-n-css=""></noscript>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script> -->
 
 </head>
 
@@ -53,7 +50,7 @@
                                 class="flex items-center gap-1 font-medium text-textDark hover:text-textGreen cursor-pointer duration-300 nav-link"
                                 href="index.html#contact">
                                 <li><span class="text-textGreen">04.</span>Contact</li>
-                            </a></ul><a href="https://sempanha.vercel.app/sem%20panha.pdf" target="_blank"><button
+                            </a></ul><a href="https://sempanha.vercel.app/sempanha.pdf" target="_blank"><button
                                 class="px-4 py-2 rounded-md text-textGreen text-[13px] border border-textGreen hover:bg-hoverColor duration-300"
                                 style="opacity:1">Resume</button></a>
                     </div>
