--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             style="transform:translateY(10px) translateZ(0)">I am a web developer with 1+
                             years of experience in Laravel. I have a strong foundation in front-end &amp; back-end
                             development and am skilled in creating user-friendly and responsive web applications using
-                            Laravel and its ecosystem
+                            Laravel and React Js.
                         </p>
                         <a href="index.html#project"><button
                                 class="w-52 h-14 text-sm font-titleFont border border-textGreen rounded-md text-textGreen tracking-wide hover:bg-hoverColor duration-300"
@@ -205,16 +205,25 @@
                                 class="hidden md:inline-flex md:w-60 lgl:w-72 h-[.5px] bg-gray-700 ml-6"></span></h2>
                         <div class="flex flex-col lgl:flex-row gap-16">
                             <div class="w-full lgl:w-2/3 text-base text-textDark font-medium flex flex-col gap-4">
-                                <p>Hello! My name is Noor Mohammad and I enjoy creating things that live on the
-                                    internet. My interest in web development started back in 2012 when I decided to try
-                                    editing custom Tumblr themes — turns out hacking together a custom reblog button
-                                    taught me a lot about HTML &amp; CSS!</p>
-                                <p>Fast-forward to today, and I had the privilege of working at an advertising agency, a
-                                    start-up,<!-- --> <span class="text-textGreen">a huge corporation, and a student-led
-                                        design studio.</span></p>
-                                <p>I enjoy working on both front-end and back-end development, as well
-                                    as full-stack projects. I am always eager to learn new skills and technologies
-                                    to enhance my web development capabilities.</p>
+                                <p>Hello! My name is Sem Panha, and I have a passion for building things that live on
+                                    the internet. My journey in web development began in 2019 when I dove into HTML and
+                                    CSS!</p>
+                                <p>Since then, I've had the opportunity to work at an advertising agency, a startup,
+                                    <span class="text-textGreen">a large corporation, and a student-led design
+                                        studio.</span></p>
+                                <p>I thrive in both front-end and back-end development, enjoying full-stack projects
+                                    that let me explore the entire development process. I’m always excited to learn new
+                                    skills and technologies to further enhance my web development expertise.</p>
+                                <p>Recently, I've been working with a range of technologies, including:</p>
+                                <ul>
+                                    <li>Laravel for robust back-end development</li>
+                                    <li>React.js for building dynamic user interfaces</li>
+                                    <li>Tailwind CSS for creating modern, responsive designs</li>
+                                    <li>JavaScript and PHP for versatile scripting</li>
+                                    <li>APIs to connect and enhance functionalities</li>
+                                </ul>
+                                <p>I'm always on the lookout for new challenges and opportunities to expand my
+                                    knowledge!</p>
                                 <p>Here are a few technologies I have been working with recently:</p>
                                 <ul class="max-w-[450px] text-sm font-titleFont grid grid-cols-2 gap-2 mt-6">
                                     <li class="flex items-center gap-2"><span class="text-textGreen"><svg
