--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         href="index.html#contact">
                                         <li style="opacity: 1; transform: none;"><span
                                                 class="text-textGreen">04.</span>Contact</li>
-                                    </a></ul><a href="https://sempanha.vercel.app/sem%20panha.pdf"
+                                    </a></ul><a href="https://sempanha.vercel.app/sempanha.pdf"
                                     target="_blank"><button
                                         class="w-32 h-10 rounded-md text-textGreen text-[13px] border border-textGreen hover:bg-hoverColor duration-300"
                                         style="opacity: 1;">Resume</button>
